# rpi-rgb-led-matrix

./: CMakeLists.txt
cmake/: rpi-rgb-led-matrix-config.cmake.in
include/: emulator.h  led-matrix.h
lib/: emulator.cc  framebuffer-internal.h  framebuffer.cc  led-matrix.cc  matrix-factory.cc
